[fix] FAQ border radius on mobile

--- a/css/alfa-style.css
+++ b/css/alfa-style.css
@@ -512,7 +512,7 @@ p.alfa-test-card-bottom-content{
     margin-bottom: 24px;
     border: 0;
     border-radius: 20px;
-    box-shadow: 0 .125rem .25rem rgba(0,0,0,.5)!important;
+    box-shadow: 0 .125rem .25rem rgba(0,0,0,.5);
 }
 .alfa-faq-card-main .accordion .card .card-header{
     padding: 2px 20px;
@@ -678,11 +678,13 @@ p.alfa-test-card-bottom-content{
 }
 .alfa-daily-task-card .datepicker table{
     width: 100%;
+    border-collapse: unset;
+    border-spacing: 10px
 }
 .alfa-daily-task-card .datepicker td,
 .alfa-daily-task-card .datepicker th{
     font-size: 12px;
-    padding: 10px 13px;
+    padding: 8px 10px;
 }
 .alfa-daily-task-card .datepicker table tr td.active {
     background: rgba(0, 205, 205, .25);
@@ -979,6 +981,9 @@ p.alfa-test-card-bottom-content{
     .alfa-today-task-list span{
         padding-left: 0;
     }
+    .alfa-daily-task-card .datepicker td, .alfa-daily-task-card .datepicker th{
+        padding: 8px 7px;
+    }
 }
 @media(min-width: 767px) and (max-width: 992px){
     .alfa-your-target-card h3{
@@ -1020,9 +1025,9 @@ p.alfa-test-card-bottom-content{
         right: -10px;
         font-size: 16px;
         padding: 12px;
-    }
+    }  
     .alfa-faq-card-main .accordion .card{
-        border-radius: 50px;
+        border-radius: 30px;
     }
  }
  @media(min-width: 376px) and (max-width: 425px){
